# jakmall_filter

./: .gitignore  Cargo.toml  README.md
src/: filter.rs  filter_applier.rs  filter_builder.rs  lib.rs  traits.rs
