[package]
name = "jakmall_filter_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tokio = { version = "1.*", features = ["full"] }

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.171", features = ["default", "derive"] }
tokio = { version = "1.*", features = ["fs"] }
toml = { version = "0.7.6", features = ["default"] }
