[package]
name = "jakmall_filter"
version = "0.1.0"
edition = "2021"

[lib]
name = "jakmall_filter"
path = "src/lib.rs"
test = true
doctest = true
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tokio = { version = "1.*", features = ["full"] }

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.171", features = ["default", "derive"] }
tokio = { version = "1.*", features = ["fs"] }
toml = { version = "0.7.6", features = ["default"] }
